[build-system]
requires = ["setuptools>=48", "wheel", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "dvc_webdav/_dvc_webdav_version.py"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["dvc_webdav"]
line_length = 79

[tool.pytest.ini_options]
log_level = "debug"
addopts = "-ra"
markers = [
    "needs_internet: Might need network access for the tests",
]

[tool.mypy]
# Error output
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
pretty = true
# See https://mypy.readthedocs.io/en/latest/running_mypy.html#missing-imports.
ignore_missing_imports = true
check_untyped_defs = false
# Warnings
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
files = ["dvc_webdav"]

[tool.pylint.message_control]
disable = [
    "format", "refactoring", "spelling", "design", "invalid-name",
    "cyclic-import", "wrong-import-order", "multiple-imports",
    "wrong-import-position", "ungrouped-imports",
    "missing-function-docstring", "missing-module-docstring",
    "missing-class-docstring", "import-outside-toplevel",
]
enable = ["c-extension-no-member", "no-else-return"]

[tool.pylint.typecheck]
signature-mutators = ["funcy.decorators.decorator"]

[tool.pylint.variables]
dummy-variables-rgx = "_+$|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)|dummy|^ignored_|^unused_"
ignored-argument-names = "_.*|^ignored_|^unused_|args|kwargs"
